--- a/public/index.html
+++ b/public/index.html
@@ -65,8 +65,7 @@
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="js/main.js"></script>
-  <!-- Register Service Worker -->
-  <!-- <script>
+  <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('/service-worker.js')
         .then(registration => {
@@ -76,6 +75,6 @@
           console.log('Service Worker registration failed:', err);
         });
     }
-  </script> -->
+  </script>
 </body>
 </html>
